<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="8dp"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.wyfinger.icleboir.NewActionActivity"
    tools:showIn="@layout/activity_newaction">

    <TextView
        android:id="@+id/textDays"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:text="@string/scheduler_dayofweek" />

    <TextView
        android:id="@+id/editDays"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="16dp"
        android:paddingEnd="4dp"
        android:paddingStart="4dp"
        android:paddingTop="10dp"
        android:text="@string/scheduler_workdays"
        android:textColor="?attr/colorAccent"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textTime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:text="@string/scheduler_time" />

    <TextView
        android:id="@+id/editTime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="16dp"
        android:paddingEnd="4dp"
        android:paddingStart="4dp"
        android:paddingTop="10dp"
        android:text="12:20"
        android:textColor="?attr/colorAccent"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textActions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:text="@string/scheduler_commands" />

    <TextView
        android:id="@+id/editActions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="16dp"
        android:paddingEnd="4dp"
        android:paddingStart="4dp"
        android:paddingTop="10dp"
        android:text="[Power][Start]"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="?attr/colorAccent"/>

</LinearLayout>
